# voice-calendar

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  api.py  config.py  db.py  main.py  mcp_entry.py  mcp_http_entry.py  models.py
backend/app/services/: __init__.py  agent.py  almanac.py  asr.py  briefing.py  calendar.py  calendar_store.py  command.py  conversation_state.py  mcp.py  mcp_server.py  news.py  nlu.py  nlu_datetime.py  nlu_titles.py
backend/tests/: conftest.py  test_agent_fallback.py  test_asr_service.py  test_calendar_meta.py  test_database.py  test_events.py  test_frontend.py  test_health.py  test_mcp_server.py  test_mcp_tools.py  test_news_briefing.py  test_nlu.py  test_notifications.py  test_text_commands.py  test_voice_commands.py
desktop-lite/: browser_launcher.py  desktop_lite_config.py  run.py
desktop-overlay/: main.js  mcpClient.mjs  package-lock.json  package.json  preload.js  preview.html
desktop-overlay/scripts/: test-mcp-client.mjs
desktop-overlay/src/: index.html  renderer.js  styles.css
docs/: spec.md
frontend/: api.js  app.css  app.js  calendar-utils.js  index.html
