[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-calendar"
version = "0.1.0"
description = "Voice-first calendar backend with web and MCP entrypoints."
requires-python = ">=3.10"
dependencies = [
  "chinese-calendar>=1.11.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "lunardate>=0.2.2",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
voice = [
  "faster-whisper>=1.1.1",
]
desktop = [
  "pywebview>=5.1",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"
